# pistomp-hal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio_io.cpp  audio_io.h  audio_io_mac.cpp  board.h  board_v3.h  encoder.cpp  encoder_sim.cpp  footswitch.cpp  footswitch_sim.cpp  gpio_button.cpp  gpio_button_sim.cpp  ili9341.cpp  ili9341.h  ili9341_stub.cpp  input_level.cpp  input_level.h  input_level_stub.cpp  leds.cpp  leds.h  leds_stub.cpp  lv_conf.h  lvgl_display.cpp  lvgl_display.h  lvgl_display_sdl.cpp  realtime.h  settings_menu_mac.mm  settings_menu_stub.cpp  sim_input.cpp  sim_input.h  sim_menu.h
.github/workflows/: build.yml  ci.yml
examples/: CMakeLists.txt  README.md
examples/controls/: main.cpp
examples/display/: main.cpp
examples/mini_pedal/: main.cpp
examples/passthrough/: main.cpp
include/pistomp/: board.h  encoder.h  footswitch.h  gpio_button.h
include/pistomp/detail/: debounce.h  quadrature.h
src/linux/: audio_io.cpp  encoder.cpp  footswitch.cpp  gpio_button.cpp  ili9341.cpp  input_level.cpp  leds.cpp  lvgl_display.cpp  settings_menu_stub.cpp
src/sim/: audio_io_mac.cpp  encoder_sim.cpp  footswitch_sim.cpp  gpio_button_sim.cpp  ili9341_stub.cpp  input_level_stub.cpp  leds_stub.cpp  lvgl_display_sdl.cpp  settings_menu_mac.mm  sim_input.cpp
tests/: CMakeLists.txt  test_debounce.cpp  test_quadrature.cpp
